# sweep-sdk

./: .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  RELEASE.md  appveyor.yml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docker/: build-utils.sh  build.sh  install-yum.sh
jsweep/: .gitignore  build.gradle  gradle.properties  libsweep-bundling.gradle  settings.gradle
jsweep/gradle/wrapper/: gradle-wrapper.properties
jsweep/src/main/java/io/scanse/sweep/: Sweep.java  SweepDevice.java  SweepSample.java
jsweep/src/main/java/io/scanse/sweep/jna/: DeviceJNAPointer.java  ErrorHandler.java  ErrorJNAPointer.java  ErrorReturnJNA.java  ScanJNAPointer.java  SweepJNA.java
jsweep/src/test/java/io/scanse/sweep/: Example.java
libsweep/: .gitignore  CMakeLists.txt  Error.h  Makefile  README.md  config.mk  dummy.c  dummy.cc  example.c  example.cc  protocol.c  protocol.cc  protocol.h  serial.h  serial_unix.c  serial_unix.cc  serial_win.cc  sweep-sdk.files  sweep-sdk.includes  sweep.c  sweep.cc  sweep.h  sweep.hpp  sweep_device.hpp  time.h  time_unix.c
libsweep/cmake/: FindSweep.cmake  config.h.in
libsweep/doc/: serial_protocol_spec.md
libsweep/examples/: CMakeLists.txt  README.md  example.c  example.cc  net.cc  net.proto  viewer.cc
libsweep/inc/: sweep.h  sweep.hpp  sweep_time.h
libsweep/include/: Error.hpp  error.hpp  protocol.h  protocol.hpp  queue.h  queue.hpp  serial.h  serial.hpp
libsweep/include/sweep/: sweep.h  sweep.hpp
libsweep/man/: build.sh  sweep-ctl.1  sweep-ctl.md
libsweep/src/: dummy.c  dummy.cc  protocol.cc  sweep-ctl.cc  sweep.c  sweep.cc
libsweep/src/arch/unix/: serial_unix.c  time_unix.c
libsweep/src/arch/win/: serial_win.c  time_win.c
libsweep/src/unix/: serial.cc
libsweep/src/win/: serial.cc
sweejs/: CMakeLists.txt  README.md  binding.gyp  index.js  package.json  sweejs.cc  sweejs.h
sweejs/sweejsd/: app.js  httpd.sh  index.html  map.html  package.json  sweejsd.js
sweephs/: LICENSE  README.md  stack.yaml  sweephs.cabal
sweephs/app/: Main.hs
sweephs/src/: Lib.hs
sweepjs/: README.md  binding.gyp  common.gypi  index.js  package.json  sweepjs.cc  sweepjs.h
sweepjs/example/: README.md  app.js  map.html  package.json
sweepjs/examples/: README.md
sweepjs/examples/websocket/: index.html  package.json  sweepjsd.js
sweeppy/: .gitignore  README.md  setup.py  sweeppy.py
sweeppy/sweeppy/: __init__.py  __main__.py  app.py
sweeppy/tests/: test.py
sweepy/: README.md  sweepy.py
travis/: java-check.sh  java-run-task.sh
