CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)

PROJECT(sweejs VERSION 0.0.1 LANGUAGES C CXX)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -pedantic")


# HACK: TODO: why is this not picked up automatically
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/home/daniel/.nvm/versions/node/v4.4.7/include/node/")


LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/node_modules/node-cmake)
FIND_PACKAGE(NodeJS)

ADD_NODEJS_MODULE(${PROJECT_NAME} sweejs.cc)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} sweep)
SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-parameter")

MESSAGE(STATUS "Node.js include path: ${NodeJS_INCLUDE_PATHS}")
MESSAGE(STATUS "Node.js libraries: ${NodeJS_LIBRARIES}")
