name:                sweephs
version:             0.1.0.0
synopsis:            Haskell bindings for the Sweep LiDAR
description:         Haskell bindings for the Sweep LiDAR low-level libsweep: <https://github.com/scanse/sweep-sdk>
homepage:            https://github.com/daniel-j-h/sweephs#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel J. Hofmann
maintainer:          daniel@trvx.org
copyright:           Daniel J. Hofmann
category:            Hardware
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
extra-source-files:
  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall
  extra-libraries:     sweep

executable sweephs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sweephs
  default-language:    Haskell2010

test-suite sweephs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sweephs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/daniel-j-h/sweephs
